tests/specs/run/package_json/invalid_value/error.ts.out
error: Invalid version requirement
    0: Unexpected character.
         invalid stuff that won't parse
         ~
    at file:///[WILDCARD]/error.ts:2:23
